--- a/RealEstateApp/Views/PropertyListPage.xaml
+++ b/RealEstateApp/Views/PropertyListPage.xaml
@@ -11,6 +11,7 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Command="{Binding GoToAddPropertyCommand}" Text="Add" />
+        <ToolbarItem Command="{Binding SortPropertiesCommand}" IconImageSource="fa_sort_amount_asc.png" />
     </ContentPage.ToolbarItems>
 
     <RefreshView Command="{Binding GetPropertiesCommand}" IsRefreshing="{Binding IsRefreshing}">
@@ -45,8 +46,8 @@
                                 <Grid
                                     Grid.Column="1"
                                     Margin="0,10,10,0"
-                                    RowDefinitions="Auto, Auto, Auto, Auto"
-                                    RowSpacing="10">
+                                    RowDefinitions="Auto, Auto, Auto, Auto, Auto"
+                                    RowSpacing="5">
                                     <Label
                                         Grid.Row="0"
                                         FontAttributes="Bold"
@@ -91,6 +92,10 @@
                                         Grid.Row="3"
                                         FontSize="13"
                                         Text="{Binding Property.LandSize, StringFormat='Land Size: {0} &#x33a1;'}" />
+                                    <Label
+                                        Grid.Row="4"
+                                        FontSize="13"
+                                        Text="{Binding Distance, StringFormat='{0:F2}km away', TargetNullValue='Location is not set'}" />
                                 </Grid>
                             </Grid>
                         </Frame>
