--- a/RealEstateApp/Views/AddEditPropertyPage.xaml
+++ b/RealEstateApp/Views/AddEditPropertyPage.xaml
@@ -50,7 +50,7 @@
                                         </FormattedString>
                                     </Label.FormattedText>
                                 </Label>
-                                <Entry FontSize="Medium" Text="{Binding Property.Latitude, StringFormat='{0:F4}'}" />
+                                <Entry FontSize="Medium" Text="{Binding Property.Latitude, StringFormat='{0:F8}'}" />
                                 <Label FontSize="Medium">
                                     <Label.FormattedText>
                                         <FormattedString>
@@ -60,15 +60,27 @@
                                         </FormattedString>
                                     </Label.FormattedText>
                                 </Label>
-                                <Entry FontSize="Medium" Text="{Binding Property.Longitude, StringFormat='{0:F4}'}" />
+                                <Entry FontSize="Medium" Text="{Binding Property.Longitude, StringFormat='{0:F8}'}" />
                             </VerticalStackLayout>
-                            <Button
-                                Grid.Column="1"
-                                Margin="10"
-                                Command="{Binding CopyCurrentLocationCommand}"
-                                FontSize="Medium"
-                                HeightRequest="70"
-                                Text="Current Location" />
+                            <Grid Grid.Column="1" ColumnDefinitions="*,*">
+                                <Button
+                                    Margin="10"
+                                    Command="{Binding CopyCurrentLocationCommand}"
+                                    FontFamily="FA-solid"
+                                    FontSize="Medium"
+                                    HeightRequest="70"
+                                    Text="{Static fa:IconFont.MapPin}"
+                                    ToolTipProperties.Text="Your current location" />
+                                <Button
+                                    Grid.Column="1"
+                                    Margin="10"
+                                    Command="{Binding LocationFromAddressCommand}"
+                                    FontFamily="FA-solid"
+                                    FontSize="Medium"
+                                    HeightRequest="70"
+                                    Text="{Static fa:IconFont.Home}"
+                                    ToolTipProperties.Text="From the provided address" />
+                            </Grid>
                         </Grid>
 
                         <Label FontFamily="FA-solid" FontSize="Medium">
