--- a/RealEstateApp/Views/AboutPage.xaml
+++ b/RealEstateApp/Views/AboutPage.xaml
@@ -3,8 +3,8 @@
     x:Class="RealEstateApp.Views.AboutPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="About">
-
+    xmlns:views="clr-namespace:RealEstateApp.Views"
+    ControlTemplate="{StaticResource pageControls}">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Color x:Key="Primary">#2196F3</Color>
