--- a/RealEstateApp/Views/PropertyDetailPage.xaml
+++ b/RealEstateApp/Views/PropertyDetailPage.xaml
@@ -8,7 +8,8 @@
     xmlns:maps="http://schemas.microsoft.com/dotnet/2021/maui/maps"
     xmlns:vm="clr-namespace:RealEstateApp.ViewModels"
     Title="{Binding Property.Address}"
-    x:DataType="vm:PropertyDetailPageViewModel">
+    x:DataType="vm:PropertyDetailPageViewModel"
+    ControlTemplate="{StaticResource pageControls}">
 
     <ContentPage.Resources>
         <ResourceDictionary>
