--- a/RealEstateApp/AppShell.xaml
+++ b/RealEstateApp/AppShell.xaml
@@ -12,6 +12,11 @@
         Route="propertylist" />
 
     <ShellContent
+        Title="Height Calculator"
+        ContentTemplate="{DataTemplate views:HeightCalculatorPage}"
+        Route="heightCalculator" />
+
+    <ShellContent
         Title="About"
         ContentTemplate="{DataTemplate views:AboutPage}"
         Route="about" />
