--- a/RealEstateApp/Views/PropertyDetailPage.xaml
+++ b/RealEstateApp/Views/PropertyDetailPage.xaml
@@ -31,7 +31,11 @@
                 Margin="-10,-10,-10,0"
                 Aspect="AspectFill"
                 HeightRequest="225"
-                Source="{Binding Property.MainImageSource}" />
+                Source="{Binding Property.MainImageSource}">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding GoToImageListCommand}" />
+                </Image.GestureRecognizers>
+            </Image>
             <Label
                 Grid.Row="1"
                 FontAttributes="Bold"
