Works on first viewing, crashes on second. Something to do with the camera not being released before the new page is opened.

--- a/RealEstateApp/AppShell.xaml
+++ b/RealEstateApp/AppShell.xaml
@@ -17,6 +17,11 @@
         Route="heightCalculator" />
 
     <ShellContent
+        Title="Barcode Scanner"
+        ContentTemplate="{DataTemplate views:BarcodeScannerPage}"
+        Route="barcodeScanner" />
+
+    <ShellContent
         Title="About"
         ContentTemplate="{DataTemplate views:AboutPage}"
         Route="about" />
